Fix tooltip z-index, hints and errors heights (#216)

--- a/projects/cps-ui-kit/styles/cps-tooltip-style.scss
+++ b/projects/cps-ui-kit/styles/cps-tooltip-style.scss
@@ -12,4 +12,5 @@
   padding: 3px;
   transition: opacity 0.2s;
   opacity: 0;
+  z-index: 1001;
 }
